Finish Working Files
feat: All files now tested and working, added comments to code for illustration, updated readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 index.php
 demo_walker_theme/nav-reference.html
+!demo_walker_theme_hc/index.php
+!demo_walker_theme/index.php
+images
+tutorial.html
